WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139241
<input> elements get whitespace action menu instead of editable text menu
https://bugs.webkit.org/show_bug.cgi?id=139241
Summary
<input> elements get whitespace action menu instead of editable text menu
Beth Dakin
Reported
2014-12-03 16:38:03 PST
<input> elements get whitespace action menu instead of editable text menu
rdar://problem/19072083
Attachments
Patch
(15.63 KB, patch)
2014-12-03 16:45 PST
,
Beth Dakin
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-12-03 16:45:08 PST
Created
attachment 242539
[details]
Patch
WebKit Commit Bot
Comment 2
2014-12-03 16:47:49 PST
Attachment 242539
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/HitTestResult.cpp:544: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 3
2014-12-03 16:53:09 PST
Comment on
attachment 242539
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=242539&action=review
> Source/WebKit2/Shared/WebHitTestResult.h:57 > bool isTextNode; > + bool isOverTextInsideFormControlElement;
I would prefer to see isTextNode and isOverTextInsideFormControlElement combined into a single isText (or maybe isOverText), since that is how it is used.
Beth Dakin
Comment 4
2014-12-03 17:09:18 PST
Thanks Sam! Tim and I talked it over, and we both think that isText/isOverText is misleading since it would not return true every single time you were over text. isTextNode() and isOverTextInsideFormControlElement() are both very specific questions that we can answer properly.
Beth Dakin
Comment 5
2014-12-03 17:09:46 PST
http://trac.webkit.org/changeset/176766
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug