Source/WebKit2/Shared/WebHitTestResult.h
@@ -54,6 +54,7 @@ public:
         bool isScrollbar;
         bool isSelected;
         bool isTextNode;
+        bool isOverTextInsideFormControlElement;
         bool isDownloadableMedia;
 
         Data();
@@ -85,6 +86,8 @@ public:
     bool isSelected() const { return m_data.isSelected; }
 
     bool isTextNode() const { return m_data.isTextNode; }
+
+    bool isOverTextInsideFormControlElement() const { return m_data.isOverTextInsideFormControlElement; }
 
     bool isDownloadableMedia() const { return m_data.isDownloadableMedia; }
 
